# CustomerProject

./: .gitignore  buildLPProject.sh  build_lp_debug.sh  description.adoc
LPProject/: CMakeLists.txt  EmpireNotes.md.in  main.cpp
LPProject/cmake/: Doxygen.cmake  GitVersion.cmake  cpp-httplib.cmake
LPProject/doc/: CMakeLists.txt  EmpireNotes.md.in  LPProject.md.in  README.md  description.adoc
LPProject/src/: CMakeLists.txt  Version.h.in  main.cpp
LPProject/src/Base/: LPHelperObject.cpp  LPKeyCloakClient.cpp  LPLogipadClient.cpp  LPObject.cpp
LPProject/src/include/: LPHelperObject.hpp  LPKeyCloakClient.hpp  LPLogipadClient.hpp  LPObject.hpp  Version.hpp.in
